--- a/LMS/LMS.csproj
+++ b/LMS/LMS.csproj
@@ -6,11 +6,14 @@
 
   <ItemGroup>
     <Folder Include="Context\" />
-    <Folder Include="Models\" />
     <Folder Include="Base\" />
     <Folder Include="Repository\Data\" />
     <Folder Include="Repository\Interface\" />
     <Folder Include="ViewModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 
