--- a/LMS/appsettings.json
+++ b/LMS/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LMS": "Server=LAPTOP-1DB333Q6; Database=LMS; User Id=sa; Password=sapassword;"
+    "LMS": "Server=LAPTOP-PJEDH272; Database=LMS; User Id=sa; Password=sapassword;"
   },
   "Jwt": {
     "Key": "qweqweqweqweqweqweqweqwe98qweqweqweqwe",
