--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -22,4 +22,6 @@
     <Folder Include="ViewModels\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties wwwroot_4lib_4bootstrap_4dist_4css_4alt_4adminlte_1components_1css_1map__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
